# day24_capital_allocator

./: README.md
home/user/capital_allocator/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
home/user/capital_allocator/config/: portfolio.yaml
home/user/capital_allocator/src/capital_allocator/: api.py  config.py  graph.py  main.py  models.py
home/user/capital_allocator/src/capital_allocator/agents/: memo.py  synergy.py  triage.py
home/user/capital_allocator/src/capital_allocator/mcp/: slack_server.py
home/user/capital_allocator/src/capital_allocator/scrapers/: base.py
