[project]
name = "capital-allocator-agent"
version = "0.1.0"
description = "AI Capital Allocator - 24/7 PE analyst agent for business acquisition sourcing"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.50",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "pydantic-ai>=0.0.30",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "trafilatura>=1.12.0",
    "playwright>=1.48.0",
    "jinja2>=3.1.4",
    "redis>=5.0.0",
    "qdrant-client>=1.10.0",
    "langsmith>=0.1.100",
]

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
